fixed overflow on datasets page

--- a/frontend/src/Datasets.css
+++ b/frontend/src/Datasets.css
@@ -1,13 +1,21 @@
+.header-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: -75px; 
+}
+
 .new-dataset-button {
     background-color: darkgreen;
     color: white;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-top: 0px; 
 }
 
 .table-container {
     max-height: 500px;
-	max-width: 1200px;
+    max-width: 1200px;
     overflow-y: auto;
     width: 80%;
     margin: 0 auto;
@@ -19,7 +27,7 @@
 .datasets-table {
     width: 100%;
     border-collapse: collapse;
-	table-layout: fixed;
+    table-layout: fixed;
 }
 
 .datasets-table thead {
@@ -33,7 +41,7 @@
     border: 2px solid #444444;
     padding: 8px;
     text-align: center;
-	overflow-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .datasets-table th {
@@ -49,12 +57,12 @@
 .manage-button {
     background-color: #444444;
     color: white;
-	margin-right: 8px;
+    margin-right: 8px;
 }
 
 .text-hl {
     color: white;
-	font-size: 110%;
+    font-size: 110%;
 }
 
 .datasets-table th:nth-child(1), .datasets-table td:nth-child(1) {
@@ -77,7 +85,7 @@
     width: 15%;
 }
 
-.datasets-table th:nth-child(6), .datasets-table td:nth-child(5) {
+.datasets-table th:nth-child(6), .datasets-table td:nth-child(6) {
     width: 20%;
 }
 
@@ -121,6 +129,6 @@
 }
 
 .vis-button {
-	color: white;
-	background-color: #000058;
+    color: white;
+    background-color: #000058;
 }
